<resources>
    <string name="app_name">Stoic Wisdom</string>
    <string name="like">Like</string>
    <string name="share">Share</string>

    <string name="sample_quote">Do not think that what is hard for you to master is humanly impossible; but if a thing is humanly possible, consider it to be within your reach</string>
    <string name="sample_author">Marcus Aurelius</string>
    <string name="sample_source">Meditations\nBook III, 5</string>

    <string name="cd_like_button">Like quote button</string>
    <string name="cd_share_button">Share quote button</string>
    <string name="menu_title_setting">Settings</string>
    <string name="menu_title_authors">Authors</string>
    <string name="sharable_title">Share this quote via</string>

    <string name="title_activity_authors">Authors</string>
    <string name="btn_title_wiki_page">Wiki Page</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <string name="menu_save_widget">Save Widget</string>
    <string name="error_widget_no_selection">Please select one quote to add a widget</string>
    <string name="quote_channel_name">Your new inspiration quote!</string>

    <string-array name="filter_spinner_values">
        <item>All Quotes</item>
        <item>Only Favorites</item>
    </string-array>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_key_enable_notifications" translatable="false">key_enable_notifications</string>
    <string name="pref_default_enable_notifications" translatable="false">false</string>
    <string name="pref_title_enable_notifications">Enable Notifications</string>

    <string name="pref_key_notification_freq" translatable="false">key_notification_frequency</string>
    <string name="pref_default_notification_freq" translatable="false">86400000</string>
    <string name="pref_title_notification_freq">Notification Frequency</string>
    <string-array name="pref_list_notifications_freq">
        <item>Daily</item>
        <item>Every other day</item>
        <item>Weekly</item>
        <item>Every other week</item>
        <item>Monthly</item>
    </string-array>
    <!-- Values for pref_list_notifications_freq_values are stored in ms -->
    <string-array name="pref_list_notifications_freq_values" translatable="false">
        <item>@string/pref_default_notification_freq</item>
        <item>172800000</item>
        <item>604800000</item>
        <item>1209600000</item>
        <item>2419200000</item>
    </string-array>

    <string name="pref_key_notification_time" translatable="false">key_notification_time</string>
    <string name="pref_default_notification_time" translatable="false">9:30</string>
    <string name="pref_title_notification_time">Notification Time</string>
    <string name="menu_title_notification">Show Notification</string>
    <string name="cd_author_image">Author Image</string>
    <string name="error_no_favorites">You don\'t have any favorite quotes</string>
    <string name="error_no_connection">No Internet Connection</string>
    <string name="error_no_author">There are no authors</string>
    <string name="error_no_quotes">Please open the app before adding a widget</string>
    <string-array name="pref_list_notifications_time">
        <item>Morning (9:30am)</item>
        <item>Afternoon (1:30pm)</item>
        <item>Evening (7:30pm)</item>
    </string-array>
    <string-array name="pref_list_notifications_time_values" translatable="false">
        <item>@string/pref_default_notification_time</item>
        <item>13:30</item>
        <item>19:30</item>
    </string-array>

</resources>
