<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SwitchPreference
        android:defaultValue="@string/pref_default_enable_notifications"
        android:key="@string/pref_key_enable_notifications"
        android:title="@string/pref_title_enable_notifications" />

    <ListPreference
        android:defaultValue="@string/pref_default_notification_freq"
        android:dependency="@string/pref_key_enable_notifications"
        android:entries="@array/pref_list_notifications_freq"
        android:entryValues="@array/pref_list_notifications_freq_values"
        android:key="@string/pref_key_notification_freq"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_notification_freq" />

    <ListPreference
        android:defaultValue="@string/pref_default_notification_time"
        android:dependency="@string/pref_key_enable_notifications"
        android:entries="@array/pref_list_notifications_time"
        android:entryValues="@array/pref_list_notifications_time_values"
        android:key="@string/pref_key_notification_time"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_notification_time" />

</PreferenceScreen>
