<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_widget"
    android:orientation="vertical"
    android:padding="@dimen/padding_widget">

    <TextView
        android:id="@+id/tv_widget_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/sample_quote"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_size_widget_quote"
        tools:text="@string/sample_quote" />

    <TextView
        android:id="@+id/tv_widget_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif"
        android:text="@string/sample_author"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_size_widget_author"
        tools:text="@string/sample_author" />

    <TextView
        android:id="@+id/tv_widget_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/sample_author"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_size_widget_source"
        tools:text="@string/sample_source" />

</LinearLayout>