<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingEnd="@dimen/cardview_inner_padding"
        android:paddingStart="@dimen/cardview_inner_padding"
        android:paddingTop="@dimen/cardview_inner_padding"
        android:textColor="@color/textPrimary"
        android:textSize="22sp"
        tools:text="@string/sample_quote" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingEnd="@dimen/cardview_inner_padding"
        android:paddingStart="@dimen/cardview_inner_padding"
        android:textColor="@color/textSecondary"
        android:textSize="16sp"
        tools:text="@string/sample_author" />

    <TextView
        android:id="@+id/tv_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/cardview_view_margin"
        android:fontFamily="sans-serif-condensed"
        android:paddingEnd="@dimen/cardview_inner_padding"
        android:paddingStart="@dimen/cardview_inner_padding"
        android:textColor="@color/textSecondary"
        android:textSize="14sp"
        tools:text="@string/sample_source" />

</merge>